headphones/service.yml
apiVersion: v1
kind: Service
metadata:
  name: headphones
  namespace: headphones
spec:
  ports:
  - name: webs
    port: 8080
    protocol: TCP
    targetPort: 8181
  selector:
    app: headphones
  type: LoadBalancer
